# Hust_Radar_2025

./: 25_main.py  25main_without_lidar.py  README.md  RMUC2025-new.pcd  calculate_initial_pose.py  debug_scripts.py  main.py  main_utilities.py  main_without_lidar.py  new_detection_test.py  new_points_data.yaml  rm25_points.yaml  select_point.py  start_ros.sh
Car/: Car.py
Hust-Radar-2025/: 25_main.py
Hust-Radar-2025/Lidar/: Converter.py  Lidar.py  PointCloud.py  bg.pcd  fast_search.py  merged_point_cloud.pcd
Hust-Radar-2025/communication/: Messager.py  Receiver.py  Sender.py  assit_yaw_pitch.py
Lidar/: Converter.py  Lidar_25.py  PointCloud.py  __init__.py  fast_search.py  rm25_points.yaml  vision_locator.py  vision_locator_24.py
PointTracker/: Tracker.py
Watcher/: my_serial.py  raw_read.py  refer.py  serial_receive.py  watcher.py
camera_locator/: anchor.py  calib.py  point_picker.py
communication/: Messager.py  Messager_test.py  Sender.py  alert_our_hero.py  assit_yaw_pitch.py  predictor.py
communication/Topo_map/: Topo_map.py  topo_2025.yaml  topo_lidar.py
communication/engine_topo_predictor/: engine_area_data.yaml  predict_engine.py
communication/hero_topo_predictor/: area_data.yaml  predict_hero.py
configs/: converter_config.yaml  main_config.yaml
detect/: Capture.py  Detector.py  camera_node.py  points.yaml
hero_topo_predictor/: area_data.yaml  predict_hero.py
pclmatcher/: CMakeLists.txt
pclmatcher/stage1/: CMakeLists.txt  package.xml
pclmatcher/stage1/include/: point_projector.hpp
pclmatcher/stage1/src/: point_projector.cpp
(+5 files in other folders)
